--- a/src/main/resources/templates/userDetails.html
+++ b/src/main/resources/templates/userDetails.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Hello, world!</title>
 </head>
@@ -14,14 +15,14 @@
 <div class="card mx-auto" style="width: 18rem;"  th:with="userDetail =${userDetails}">
     <img style="border-radius: 150px" class="card-img-top" th:src="@{${userDetail.photoUrl}}" alt="Card image cap">
     <div class="card-body">
-        <h5 class="card-title" th:text="${userDetail.firstName}+' '+${userDetail.lastName}"></h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h5 class="card-title text-capitalize" th:text="${userDetail.firstName}+' '+${userDetail.lastName}"></h5>
+        <p class="card-text" th:text="${userDetail.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item" th:text="'Email: '+ ${userDetails.email}"></li>
-        <li class="list-group-item" th:text="'Gender: '+ ${userDetails.gender}"></li>
-        <li class="list-group-item" th:text="'DOB: '+${userDetails.dob}"></li>
-        <li class="list-group-item" th:text="'Phone: '+ ${userDetails.phone}"></li>
+        <li class="list-group-item"><i class="fa fa-envelope"></i> <span th:text="'Email: '+ ${userDetails.email}"></span></li>
+        <li class="list-group-item"><i class="fa fa-phone"></i> <span th:text="'Phone: '+ ${userDetails.phone}"></span></li>
+        <li class="list-group-item"><i class="fa fa-linkedin"></i> <a th:href="@{${userDetails.linkedin}}">LinkedIn</a></li>
+        <li class="list-group-item"><i class="fa fa-instagram"></i> <a th:href="@{${userDetails.instagram}}">Instagram</a></li>
     </ul>
 <!--    <div class="card-body">-->
 <!--        <a href="#" class="card-link">Card link</a>-->
